Kubernetes/networkpolicies/netpol-vaultward-postgrs.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-vaultward-postgrs
  namespace: ns-management
spec:
  podSelector:
    matchLabels:
      app: vaultwarden-postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vaultwarden
      ports:
        - port: 5432
  egress: []
